--- a/about.html
+++ b/about.html
@@ -13,21 +13,20 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><button>О нас</button><a href="contacts.html"><button>Контакты</button></a>
+        <a href="index.html"><button>Главная</button></a><button>О нас</button><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'> <div class="block_headpicture block_headpicture_animation"></div></div></div>
     <div class="main">
-      <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">О нашей шаверме</h2>
       <p class="text5">В нашем магазине, который находится в прекрасной независимой Северной корее, продаётся пожалуй лучшая шаверма в истории! Как вы сможете отказать нам, когда наша сочная, приготовленная сыном маминой подруги шаверма,</p>
       <img class="picture" src="images/Cook.jpg" alt="Сын Маминой Подруги">
