--- a/bought.html
+++ b/bought.html
@@ -13,21 +13,20 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+        <a href="index.html"><button>Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'><div class="block_headpicture block_headpicture_animation"></div></div></div>
     <div class="main">
-      <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">Спасибо за покупку!</h2>
       <p class="text2">Если бы не ты, то мы бы не выжили в этом суровом мире. Но теперь мы явно проживём ещё 2 дня...</p>
       <p class="text2">Спасибо тебе...</p>
