--- a/contacts.html
+++ b/contacts.html
@@ -13,21 +13,20 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-        <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><button>Контакты</button>
+        <a href="index.html"><button>Главная</button></a><a href="about.html"><button>О нас</button></a><button>Контакты</button>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'><div class="block_headpicture block_headpicture_animation"></div></div></div>
     <div class="main">
-      <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">Контакты</h2>
       <div class="block2"><img class="inblock2" src="images/VasyaKatlabygaInHisTown.jpg" alt="Vasya"><p class="text4">Василий Катлабуга - Духовный наставник и лидер проекта.</p><p class="text4 small">VasyokTheCoolest@info.com</p></div>
       <div class="block2"><img class="inblock2" src="images/AndrewTheAvatar.png" alt="Andrew"> <p class="text4">Андрей Давидян - Певун, написавший саундтрек к рекламе и менеджер проекта.</p><p class="text4 small">AndrewDavidian@info.com</p></div>
