--- a/boat.html
+++ b/boat.html
@@ -13,27 +13,24 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+        <a href="index.html"><button>Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head img15"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head img15"><div class='block_headcover'><div class="block_headpicture img15"></div></div></div>
     <div class="main">
-      <div class="block_headpicture img15"></div>
       <h2 class="text3">Шаверма-лодка</h2>
       <p class="text5">Порой людям просто хочется уплыть от своих проблем. Но для такого дела нужна лодка. Что ж, мы придумали пожалуй лучшее решение для этой проблемы - Шаверма лодка. Особая конструкция корпуса этого деликатеса позволяет находиться ему на плаву. Что позволит вам уплыть почти куда угодно.</p>
       <p class="text5">Ну а на самом деле эта шаверма просто провалится под вашим весом. Увы.</p>
-      <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 30020 руб.</button></a>
-      <div class="space"></div>
     </div>
 </main>
 <footer>
