--- a/dessert.html
+++ b/dessert.html
@@ -13,27 +13,24 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+        <a href="index.html"><button>Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head img14"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head img14"><div class='block_headcover'><div class="block_headpicture img14"></div></div></div>
     <div class="main">
-      <div class="block_headpicture img14"></div>
       <h2 class="text3">Шаверма на десерт</h2>
       <p class="text5">Недавно мы поняли, что на нашем сайте слишком много мяса. И последнее, что мы предпринимали - это овощная шаверма. Так не пойдёт. Мы представляем вам то, что вы всегда будете заказывать вместе с нашими обычными шавермами в качестве десерта. Особая конструкция, использующая фрукты и мороженое вместо привычных вам ингредиентов (А ведь это вроде основные элементы десерта). Отсюда и название.</p>
       <p class="text5">А ещё здесь у нас самая справедливая цена.</p>
-      <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 16050 руб.</button></a>
-      <div class="space"></div>
     </div>
 </main>
 <footer>
