--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <button class="header_button1">Главная</button><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+          <button>Главная</button><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'><div class="block_headpicture block_headpicture_animation"></div></div></div>
     <div class="main">
-      <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">Главная</h2>
       <p class="text2">Добро пожаловать на самый лучший сайт по продаже шавермы!</p>
       <a href="couple.html"><div class="block img1"><div class="inblock">Шаверма для пары</div></div></a>
