--- a/lunch.html
+++ b/lunch.html
@@ -13,26 +13,23 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+        <a href="index.html"><button>Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head img10"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head img10"><div class='block_headcover'><div class="block_headpicture img10"></div></div></div>
     <div class="main">
-      <div class="block_headpicture img10"></div>
       <h2 class="text3">Полный обед с шавермой</h2>
       <p class="text5">Кто-то может подумать: "Да это же тот же самый особый набор с шавермой, только на тарелочке". А мы вам скажем, что на самом деле это просто шаверма на тарелочке. Ну ещё картошечка есть.</p>
-      <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 5500 руб.</button></a>
-      <div class="space"></div>
     </div>
 </main>
 <footer>
