--- a/mini.html
+++ b/mini.html
@@ -13,26 +13,23 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
+      <h1 class="text1"><a href="index.html">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+        <a href="index.html"><button>Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
 </header>
 <main>
-  <div class="space"></div>
-    <div class="block_head img2"><div class='block_headcover'></div></div>
+  <div class="makesthingsbetter"></div>
+    <div class="block_head img2"><div class='block_headcover'><div class="block_headpicture img2"></div></div></div>
     <div class="main">
-      <div class="block_headpicture img2"></div>
       <h2 class="text3">Мини шаверма</h2>
       <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
-      <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 9250000 руб.</button></a>
-      <div class="space"></div>
     </div>
 </main>
 <footer>
