--- a/easteregg.html
+++ b/easteregg.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="space"></div>
-  <div class="vasya">Здесь нет никакой пасхалки. Уходи.</div>
+  <div class="vasya">Здесь до сих пор нет никакой пасхалки. Уходи.</div>
+  <img src="images/SobakaBarabaka.jpg" alt="Doge" style="float: right; opacity: 0.15;">
 </body>
 </html>
