--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <a href="lunch.html"><div class="block img10"><div class="inblock">Полный обед с шавермой</div></div></a>
       <a href="portable.html"><div class="block img9"><div class="inblock">Портативная шаверма</div></div></a>
       <a href="dessert.html"><div class="block img14"><div class="inblock">Шаверма на десерт</div></div></a>
+      <a href="final.html"><div class="block imgfinal"><div class="inblock">Последняя порция Вселенной</div></div></a>
       <div class="space"></div>
     </div>
 </main>
