This time we are finished for real.
At least I think so.

--- a/boughtspecial.html
+++ b/boughtspecial.html
@@ -34,7 +34,7 @@
       <div class="space"></div>
       <img class="picture" style="text-align: center;" src="images/SobakaBarabaka.jpg" alt="Doge">
       <div class="space"></div>
-      <a href="http://natribu.org/"><button class="buy_button">Сказать "Пока!"</button></a>
+      <a href="https://movingmilkshake.github.io/images/SobakaBarabaka.jpg"><button class="buy_button">Сказать "Пока!"</button></a>
       <div class="space"></div>
     </div>
 </main>
