--- a/easteregg.html
+++ b/easteregg.html
@@ -9,8 +9,7 @@
   <title>Вселенская мощь</title>
 </head>
 <body>
-  <div class="space"></div>
   <div class="vasya">Здесь до сих пор нет никакой пасхалки. Уходи.</div>
-  <img src="images/SobakaBarabaka.jpg" alt="Doge" style="float: right; opacity: 0.15;">
+  <img src="images/SobakaBarabaka.jpg" alt="Doge" style="float: right; opacity: 0.15;" height="300px" width="350px">
 </body>
 </html>
