--- a/final.html
+++ b/final.html
@@ -27,7 +27,7 @@
   <div class="makesthingsbetter"></div>
     <div class="block_head imgfinal"><div class='block_headcover'><div class="block_headpicture imgfinal"></div></div></div>
     <div class="main">
-      <h2 class="text3"></h2>
+      <h2 class="text3">Финал</h2>
       <p class="text5">Да, это действительно последняя порция шавермы от Вселенской Мощи.</p>
       <p class="text5">Мы прошли большой путь. Ну, по крайней мере кто-то из нас, когда кто-то просто сидел в Симсе.</p>
       <p class="text5">Никто из вас не оказал нам поддержку по мере этого пути, но мы всё равно крайне благодарны вам за все те вещи, что вы делали для нас. Например, платили за наши шавермы воображаемыми деньгами, которые мы не получали. Или искали ту самую пасхалку, что мы оставили вам ещё в самый первый день.</p>
